package com.example.node;

import com.example.Wire;
import com.example.message.Message;

public interface OutputNode {
    public void wireIn(Wire wire);
}
