@startuml

class Wire {
}

abstract class Node {
    #id: UUID
    #createdDate: OffsetDateTime
    #name: String
}

abstract class ActiveNode {
    #startTime: long
    #thread: Thread
}

abstract class WirableNode {
    -wires: Set<Wire>
}

interface InputNode {
}

interface OutputNode {
}

class TerminalInputNode {
    -br: BufferedReader
}

class ServerNode {
}

class HttpNode {
}

class Message {
}

class LogNode {
}

Node <|-- ActiveNode
ActiveNode <|-- WirableNode
InputNode <|.. TerminalInputNode
OutputNode <|.. TerminalOutputNode
WirableNode <|-- TerminalInputNode
WirableNode <|-- TerminalOutputNode
WirableNode <|-- ServerNode
WirableNode <|-- LogNode
ServerNode <|-- EchoServerNode
OutputNode <|.. ServerNode
OutputNode <|.. HttpNode
InputNode <|.. HttpNode

JSONObject <|-- Message
WirableNode <|-- HttpNode

Wire *-- WirableNode

@enduml